--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+title: MySpace Windows 93 Themes
+description: 💾 CSS themes made for profile customization on the site https://myspace.windows93.net/ ; a restored version of the old https://myspace.com/
 plugins:
   - jekyll-relative-links
   - jekyll-seo-tag
