--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: MySpace Windows 93 Themes
 description: 💾 CSS themes made for profile customization on the site https://myspace.windows93.net/ ; a restored version of the old https://myspace.com/
+url: "https://sophiezhng.github.io/my-space-windows-93-themes"
 plugins:
   - jekyll-relative-links
   - jekyll-seo-tag
