--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: MySpace Windows 93 Themes
-description: 💾 CSS themes made for profile customization on myspace.windows93.net
+description: 💾 CSS themes made for profile customization
 url: "https://sophiezhng.github.io/my-space-windows-93-themes"
 plugins:
   - jekyll-relative-links
