--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ url: "https://sophiezhng.github.io/my-space-windows-93-themes"
 plugins:
   - jekyll-relative-links
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 google_analytics: G-NETH5YXE1B
 relative_links:
